Fixed padding overflow in repositories

--- a/src/components/Repositories.module.css
+++ b/src/components/Repositories.module.css
@@ -7,7 +7,7 @@
 .repositoriesContainer {
     display: flex;
     align-items: center;
-    padding: 1rem 0;
+    margin-top: 2rem;
     width: 100%;
 }
 
